--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ basepython = python3.6
 deps =
     six
     flake8
-commands = flake8 check_systemd.py test
+commands = flake8 check_systemd.py test setup.py
