Generate README on each test run

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py3, flake8
 [testenv]
 deps =
   nose
-  jfscripts
+  jfscripts>=0.0.4
 commands = nosetests --nocapture {posargs}
 
 [testenv:flake8]
