--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,17 @@
 [tox]
-envlist = py3, flake8
+envlist = py36, py37, py38, flake8
 
 [testenv]
 deps =
   nose
   jfscripts>=0.0.4
 commands = nosetests --nocapture {posargs}
+
+[testenv:py37]
+basepython = python3.7
+
+[testenv:py38]
+basepython = python3.8
 
 [testenv:flake8]
 basepython = python3.6
