Remove dependency from jfscript

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,11 @@
 envlist = py36, py37, py38, flake8
 
 [testenv]
-deps =
-  nose
-  jfscripts>=0.0.4
+deps = nose
 commands = nosetests --nocapture {posargs}
+
+[testenv:py36]
+basepython = python3.6
 
 [testenv:py37]
 basepython = python3.7
@@ -15,7 +16,5 @@ basepython = python3.8
 
 [testenv:flake8]
 basepython = python3.6
-deps =
-    six
-    flake8
+deps =  flake8
 commands = flake8 check_systemd.py test setup.py
