--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py36, py37, py38, flake8, docs
 
 [testenv]
 deps = nose
@@ -18,3 +18,10 @@ basepython = python3.8
 basepython = python3.6
 deps =  flake8
 commands = flake8 check_systemd.py test setup.py
+
+[testenv:docs]
+basepython = python3.8
+deps =
+    sphinx
+    sphinx_rtd_theme
+commands = sphinx-build -q -b html doc/source {envtmpdir}/html
