Test on python3.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, flake8, docs
+envlist = py36, py37, py38, py39, flake8, docs
 
 [testenv]
 deps = nose
@@ -14,8 +14,11 @@ basepython = python3.7
 [testenv:py38]
 basepython = python3.8
 
+[testenv:py39]
+basepython = python3.9
+
 [testenv:flake8]
-basepython = python3.6
+basepython = python3.8
 deps =  flake8
 commands = flake8 check_systemd.py test setup.py
 
