--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ script: tox
 
 jobs:
   include:
-  - python: '3.6'
-    env: TOXENV=py36
-  - python: '3.7'
-    env: TOXENV=py37
+  # - python: '3.6'
+  #   env: TOXENV=py36
+  # - python: '3.7'
+  #   env: TOXENV=py37
   - python: '3.8'
     env: TOXENV=py38
-  - python: '3.6'
-    env: TOXENV=flake8
+  # - python: '3.8'
+  #   env: TOXENV=flake8
   - stage: deploy
     script: echo "Deploying on PyPi ..."
     env:
