Wrap the D-Bus manager into a own class and improve documentation

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands = flake8 check_systemd.py test setup.py
 [testenv:docs]
 basepython = python3.8
 deps =
+    pgi # PGI - Pure Python GObject Introspection Bindings API compatible with PyGObject.
     sphinx
     sphinx_rtd_theme
 commands = sphinx-build -q -b html doc/source {envtmpdir}/html
