Add some type annotations

--- a/tox.ini
+++ b/tox.ini
@@ -28,4 +28,5 @@ deps =
     pgi # PGI - Pure Python GObject Introspection Bindings API compatible with PyGObject.
     sphinx
     sphinx_rtd_theme
+    sphinx-autodoc-typehints
 commands = sphinx-build -q -b html doc/source {envtmpdir}/html
