Setup github actions

--- a/tox.ini
+++ b/tox.ini
@@ -30,3 +30,10 @@ deps =
     sphinx_rtd_theme
     sphinx-autodoc-typehints
 commands = sphinx-build -q -b html doc/source {envtmpdir}/html
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38, docs, flake8, manifest
+    3.9: py39
