--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py36, py37, py38, py39, flake8, docs
+isolated_build = True
 
 [testenv]
 deps = nose
@@ -20,7 +21,7 @@ basepython = python3.9
 [testenv:flake8]
 basepython = python3.8
 deps =  flake8
-commands = flake8 check_systemd.py test setup.py
+commands = flake8 check_systemd.py test
 
 [testenv:docs]
 basepython = python3.8
