Upgrade to nose2 to support 3.10

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ envlist = py37, py38, py39, py310, flake8, docs
 isolated_build = True
 
 [testenv]
-deps = nose
-commands = nosetests --nocapture {posargs}
+deps = nose2
+commands = nose2 {posargs}
 
 [testenv:py37]
 basepython = python3.7
