--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ basepython = python3.10
 [testenv:flake8]
 basepython = python3.8
 deps =  flake8
-commands = flake8 check_systemd.py test
+commands = flake8 check_systemd.py tests
 
 [testenv:docs]
 basepython = python3.8
