--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,32 @@
 [tox]
-envlist = py37, py38, py39, py310, flake8, docs
+envlist = py{38,39,310,311}, flake8, docs
 isolated_build = True
 
 [testenv]
-deps = nose2
-commands = nose2 {posargs}
-
-[testenv:py37]
-basepython = python3.7
-
-[testenv:py38]
-basepython = python3.8
-
-[testenv:py39]
-basepython = python3.9
-
-[testenv:py310]
-basepython = python3.10
+# Do not use basepython here. This way the existing Python version can
+# be selected automatically.
+# basepython = python3.10
+deps =
+    nose2==0.11.0
+# --output-buffer captures the printed output of the tests.
+commands = nose2 --output-buffer {posargs}
 
 [testenv:flake8]
-basepython = python3.8
-deps =  flake8
+deps =
+    flake8==4.0.1
 commands = flake8 check_systemd.py tests
 
 [testenv:docs]
-basepython = python3.8
 deps =
     pgi # PGI - Pure Python GObject Introspection Bindings API compatible with PyGObject.
-    sphinx
-    sphinx_rtd_theme
+    sphinx==5.0.2
+    sphinx_rtd_theme==1.0.0
     sphinx-autodoc-typehints
 commands = sphinx-build -q -b html doc/source {envtmpdir}/html
 
 [gh-actions]
 python =
-    3.7: py37
-    3.8: py38, docs, flake8, manifest
+    3.8: py38
     3.9: py39
-    3.10: py310
+    3.10: py310, docs, flake8
+    3.11: py311
