Convert the README file from markdown to reStructuredText
ReStructuredText is better suited to a Python project.
Use the tool readme-patcher to generate the README.rst from a template.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "check_systemd"
 version = "2.3.1"
 description = "Nagios / Icinga monitoring plugin to check systemd for failed units."
 authors = ["Josef Friedrich <josef@friedrich.rocks>"]
-readme = "README.md"
+readme = "README.rst"
 license = "LGPL-2.1-only"
 repository = "https://github.com/Josef-Friedrich/check_systemd"
 classifiers = [
@@ -24,6 +24,9 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 nagiosplugin = "^1.2"
+
+[tool.poetry.group.dev.dependencies]
+readme-patcher = "^0.4.0"
 
 [build-system]
 requires = ["poetry>=1.2.0b2"]
