--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [metadata]
 description-file = README.md
+
+# for “flake8” to work well with “black”
+[flake8]
+max-line-length = 88
+extend-ignore = E203
