--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,39,310,311}, flake8, docs
+envlist = py{38,39,310,311}, format, docs, lint
 isolated_build = True
 
 [testenv]
@@ -11,10 +11,13 @@ deps =
 # --output-buffer captures the printed output of the tests.
 commands = nose2 --output-buffer {posargs}
 
-[testenv:flake8]
+[testenv:format]
 deps =
-    flake8==4.0.1
-commands = flake8 check_systemd.py tests
+    isort==5.10.1
+    black==22.6.0
+commands =
+    isort .
+    black .
 
 [testenv:docs]
 deps =
@@ -24,9 +27,14 @@ deps =
     sphinx-autodoc-typehints
 commands = sphinx-build -q -b html doc/source {envtmpdir}/html
 
+[testenv:lint]
+deps =
+    flake8==4.0.1
+commands = flake8 check_systemd.py tests
+
 [gh-actions]
 python =
     3.8: py38
     3.9: py39
-    3.10: py310, docs, flake8
+    3.10: py310, format, docs, lint
     3.11: py311
